# novosti

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  news-bot.service  pyproject.toml  requirements.txt  run.sh
config/: config.yaml
config/sources/: china.yaml  europe.yaml  india.yaml  japan.yaml  latam.yaml  middle_east.yaml  russia.yaml  usa.yaml
src/: main.py
src/aggregator/: __init__.py  collector.py  deduplicator.py  global_digest.py  pipeline.py  summarizer.py  translator.py
src/llm/: __init__.py  client.py  prompts.py
src/parsers/: __init__.py  base_parser.py  regional_parser.py  rss_parser.py
src/scheduler/: __init__.py  cron_manager.py
src/storage/: __init__.py  database.py  models.py
src/telegram/: __init__.py  formatter.py  sender.py
src/utils/: __init__.py  config.py  logger.py  timezone.py
