[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-aggregator"
version = "1.0.0"
description = "World News Aggregator Bot - collects and summarizes news from around the world"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "News Aggregator Team"}
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "feedparser>=6.0.10",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "newsapi-python>=0.2.7",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "openai>=1.0",
    "python-telegram-bot>=22.0",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
news-bot = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
